LR page - the solution section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -124,7 +124,8 @@
 					<p class="title">What we did:</p>
 					<ul class="working-area-wrapper">
 						<li class="working-area-wrapper-list">
-							<span class="working-area-wrapper-list__item"><a href="">UX</a></span>
+							<span class="working-area-wrapper-list__item"><a
+								href="">UX</a></span>
 						</li>
 						<li class="working-area-wrapper-list">
 							<span class="working-area-wrapper-list__item"><a href="">App Development</a></span>
@@ -192,32 +193,30 @@
 				experience. In fact, a person can also control what happens in the
 				dream. This typically happens during REM sleep, one of the dream-stages.
 			</p>
-			<div class="padding-1">
-				<div class="d-flex">
-					<div class="section-2">
-						<ul class="solution-list-wrapper list-style-none">
-							<li class="solution-list-wrapper__items">
+			<div class="section-wrapper">
+				<div class="section-2">
+					<ul class="solution-list-wrapper list-style-none">
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The onboarding flow is <span
 									class="special-text-bold">simple and intuitive.</span> Users can login using their Google account and navigate through the app easily.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">Each task is divided into <span
 									class="special-text-bold">smodular steps that helps users move faster,</span> without getting overwhelmed by information overload.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The use of sans-serif font is by choice to <span
 									class="special-text-bold">simprove readability and clarity.</span> Since the users will be using the app at all times- during the daytime as well as night, we didn't want them to lose their attention to curvy font styles.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The buttons and cards are <span
 									class="special-text-bold">ergonomically placed</span> so that it's easier for the user to tap and swipe without using the other hand.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">We’ve designed the app keeping in mind the environment in which end users will use the application. Therefore, we’ve designed <span
 									class="special-text-bold">multiple ways (voice, text and sketch) to record and maintain</span> a dream journal.</span>
-							</li>
-						</ul>
-					</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -231,37 +230,33 @@
 				pro-lucid dreamers or beginners who are new to the realm of lucid
 				dreaming. So, the user experience is designed to make it easy for every
 				user persona.</p>
-			<div class="padding-1">
-				<div class="d-flex">
-					<div class="section-1">
-						<img class="mob-ui"
-						     src="/images/mobile-mockup-lucid-dream-2x.png" />
-						<!-- <div style="background: #152946;"></div> -->
-					</div>
-					<div class="section-2">
-						<ul class="solution-list-wrapper list-style-none">
-							<li class="solution-list-wrapper__items">
+			<div class="section-wrapper">
+				<div class="first-section">
+					<img class="mob-ui" src="/images/mobile-mockup-lucid-dream-2x.png" />
+				</div>
+				<div class="second-section">
+					<ul class="solution-list-wrapper list-style-none">
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The onboarding flow is <span
 									class="special-text-bold">simple and intuitive.</span> Users can login using their Google account and navigate through the app easily.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">Each task is divided into <span
 									class="special-text-bold">smodular steps that helps users move faster,</span> without getting overwhelmed by information overload.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The use of sans-serif font is by choice to <span
 									class="special-text-bold">simprove readability and clarity.</span> Since the users will be using the app at all times- during the daytime as well as night, we didn't want them to lose their attention to curvy font styles.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">The buttons and cards are <span
 									class="special-text-bold">ergonomically placed</span> so that it's easier for the user to tap and swipe without using the other hand.</span>
-							</li>
-							<li class="solution-list-wrapper__items">
+						</li>
+						<li class="solution-list-wrapper__items">
 								<span class="common-para">We’ve designed the app keeping in mind the environment in which end users will use the application. Therefore, we’ve designed <span
 									class="special-text-bold">multiple ways (voice, text and sketch) to record and maintain</span> a dream journal.</span>
-							</li>
-						</ul>
-					</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -294,7 +289,7 @@
 				hearts at India’s Best Design Awards-2019 in the mobile design category.
 				The app has also received ravishing reviews from Stanford's Sleep and
 				Dream class where the founder of Lucid Reality teaches.</p>
-			<div class="d-flex award-wrapper">
+			<div class="award-wrapper">
 				<div class="section-1">
 					<div class="award-bg">
 						<img class="award-bg__img" src="/images/Award-Image.png">
@@ -308,7 +303,7 @@
 							professional, but also well-researched and thought-out. Their team
 							went the extra mile to exceed expectations and was great to work
 							with overall.</p>
-						<div class="award-testimonial__wrapper d-flex">
+						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
 								<p class="testimonial-client-para__name">jonathan berent</p>
@@ -328,21 +323,23 @@
 			<label class="label">read next</label>
 			<div class="section-wrapper">
 				<div class="first-section">
-				<h2>Catalog</h2>
-				<p>Revolutionizing content production workflows with technology & design</p>
-				<a href="">
-					View case study
-					<i class="icon right-arrow"></i>
-				</a>
-			</div>
+					<h2>Catalog</h2>
+					<p>Revolutionizing content production workflows with technology &
+						design</p>
+					<a href="">
+						View case study
+						<i class="icon right-arrow"></i>
+					</a>
+				</div>
 				<div class="second-section">
-				<h2>mPulse</h2>
-				<p>A HIPAA compliant mobile engagement solution for healthcare providers</p>
-				<a href="">
-					View case study
-					<i class="icon right-arrow"></i>
-				</a>
-			</div>
+					<h2>mPulse</h2>
+					<p>A HIPAA compliant mobile engagement solution for healthcare
+						providers</p>
+					<a href="">
+						View case study
+						<i class="icon right-arrow"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
