LR page - the solution section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -225,7 +225,7 @@
 	<section class="the-solution">
 		<div class="inner-container">
 			<h2 class="label">The Solution</h2>
-			<h3 class="main-heading">Designed for every user persona</h3>
+			<h3 class="main-heading">Designed for every lucid dreamer persona</h3>
 			<p class="common-para">The targeted audience of our app is either
 				pro-lucid dreamers or beginners who are new to the realm of lucid
 				dreaming. So, the user experience is designed to make it easy for every
