--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -296,17 +296,12 @@
 				</div>
 				<div class="second-section">
 					<div class="award-testimonial">
-						<p class="award-testimonial__para">Quovantis developed an
-							aesthetically impressive app that's helped the company stand out
-							in the App Store. Their designs are not only unique and highly
-							professional, but also well-researched and thought-out. Their team
-							went the extra mile to exceed expectations and was great to work
-							with overall.</p>
+						<p class="award-testimonial__para">We are not “Solving a Problem”. We are unlocking a new world. We want people to explore their full potential. Whether one is a creative professional looking for novel experiences, or an executive looking for enhanced creative mental states, this could potentially change the way we look at problems.</p>
 						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
-								<p class="testimonial-client-para__name">jonathan berent</p>
-								<p class="testimonial-client-para__designation">ceo<span
+								<p class="testimonial-client-para__name">sumeet mehta</p>
+								<p class="testimonial-client-para__designation">project manager<span
 									class="testimonial-client-para__company">lucid reality</span>
 								</p>
 							</div>
