'an overview' section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -188,31 +188,37 @@
 				<div class="first-section">
 					<h2 class="label">An Overview</h2>
 					<h3 class="main-heading">Are you dreaming? Or, are you Lucid
-					Dreaming?</h3>
+						Dreaming?</h3>
 					<p class="description">
-						Lucid dreaming is a dream where you’re aware of everything you see and
+						Lucid dreaming is a dream where you’re aware of everything you see
+						and
 						experience. In fact, a person can also control what happens in the
-						dream. This typically happens during REM sleep, one of the dream-stages.
+						dream. This typically happens during REM sleep, one of the
+						dream-stages.
 					</p>
 					<p class="description">
-						Lucid dreaming needs a lot of practice and discipline. One has to perform steps like recognizing dream signs, doing reality checks, keeping a dream journal, and so on. Our partners wanted to build a mobile app that helps people practice it with ease. Their vision is to help people become more aware of their dreams and enhance their potential by learning to practice it in the right way.
+						Lucid dreaming needs a lot of practice and discipline. One has to
+						perform steps like recognizing dream signs, doing reality checks,
+						keeping a dream journal, and so on. Our partners wanted to build a
+						mobile app that helps people practice it with ease. Their vision is
+						to help people become more aware of their dreams and enhance their
+						potential by learning to practice it in the right way.
 					</p>
 				</div>
 				<div class="second-section">
 					<div class="award-testimonial">
-						<p class="award-testimonial__para">Quovantis developed an
-							aesthetically impressive app that's helped the company stand out
-							in the App Store. Their designs are not only unique and highly
-							professional, but also well-researched and thought-out. Their team
-							went the extra mile to exceed expectations and was great to work
-							with overall.</p>
-						<div class="award-testimonial__wrapper d-flex">
+						<p class="award-testimonial__para">
+							We are not “Solving a Problem”. We are unlocking a new world. We
+							want people to explore their full potential. Whether one is a
+							creative professional looking for novel experiences, or an
+							executive looking for enhanced creative mental states, this could
+							potentially change the way we look at problems.
+						</p>
+						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
-								<p class="testimonial-client-para__name">jonathan berent</p>
-								<p class="testimonial-client-para__designation">ceo<span
-									class="testimonial-client-para__company">lucid reality</span>
-								</p>
+								<p class="testimonial-client-para__name">Sumeet Mehta</p>
+								<p class="testimonial-client-para__designation">Project Manager | Lucid Reality</p>
 							</div>
 						</div>
 					</div>
@@ -296,7 +302,12 @@
 				</div>
 				<div class="second-section">
 					<div class="award-testimonial">
-						<p class="award-testimonial__para">We are not “Solving a Problem”. We are unlocking a new world. We want people to explore their full potential. Whether one is a creative professional looking for novel experiences, or an executive looking for enhanced creative mental states, this could potentially change the way we look at problems.</p>
+						<p class="award-testimonial__para">We are not “Solving a Problem”.
+							We are unlocking a new world. We want people to explore their full
+							potential. Whether one is a creative professional looking for
+							novel experiences, or an executive looking for enhanced creative
+							mental states, this could potentially change the way we look at
+							problems.</p>
 						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
