responsive header expanded menu

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -41,41 +41,71 @@
 			</ul>
 		</nav>
 	</div>
-	<div class="expanded-menu">
-		<div class="left-details">
-			<div class="img-wrapper">
-				<img
-					src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />
-			</div>
-			<div class="contact-info">
-				<ul class="contact-info-header list-style-none">
-					<li class="contact-info-header__items">
-						<span>t:<a
-							href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>
-					</li>
-					<li class="contact-info-header__items">
-						<span>m:<a
-							href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis"
-							target="_top">hello@quovantis.com</a></span>
-					</li>
-				</ul>
-			</div>
-			<div class="social-media-links">
-				<ul class="header-social-media-wrapper list-style-none">
-					<li class="header-social-media-wrapper__link"><span>Medium</span></li>
-					<li class="header-social-media-wrapper__link"><span>Twitter</span>
-					</li>
-					<li class="header-social-media-wrapper__link"><span>Dribbble</span>
-					</li>
-					<li class="header-social-media-wrapper__link"><span>Instagram</span>
-					</li>
-					<li class="header-social-media-wrapper__link"><span>LinkdIn</span>
-					</li>
-				</ul>
-			</div>
-		</div>
+<!--	<div class="expanded-menu">-->
+<!--		<div class="left-details">-->
+<!--			<div class="img-wrapper">-->
+<!--				<img-->
+<!--					src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />-->
+<!--			</div>-->
+<!--			<div class="contact-info">-->
+<!--				<ul class="contact-info-header list-style-none">-->
+<!--					<li class="contact-info-header__items">-->
+<!--						<span>t:<a-->
+<!--							href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>-->
+<!--					</li>-->
+<!--					<li class="contact-info-header__items">-->
+<!--						<span>m:<a-->
+<!--							href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis"-->
+<!--							target="_top">hello@quovantis.com</a></span>-->
+<!--					</li>-->
+<!--				</ul>-->
+<!--			</div>-->
+<!--			<div class="social-media-links">-->
+<!--				<ul class="header-social-media-wrapper list-style-none">-->
+<!--					<li class="header-social-media-wrapper__link"><span>Medium</span></li>-->
+<!--					<li class="header-social-media-wrapper__link"><span>Twitter</span>-->
+<!--					</li>-->
+<!--					<li class="header-social-media-wrapper__link"><span>Dribbble</span>-->
+<!--					</li>-->
+<!--					<li class="header-social-media-wrapper__link"><span>Instagram</span>-->
+<!--					</li>-->
+<!--					<li class="header-social-media-wrapper__link"><span>LinkdIn</span>-->
+<!--					</li>-->
+<!--				</ul>-->
+<!--			</div>-->
+<!--		</div>-->
 
-		<div class="list-wrapper">
+<!--		<div class="list-wrapper">-->
+<!--			<ul class="list-style-none header-menu-list">-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">Who we are</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">What we do</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">Our Work</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Home</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Careers</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Blog</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Contact</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items item-btn">-->
+<!--					<a class="primary-btn-sm">Start a Project</a>-->
+<!--				</li>-->
+<!--			</ul>-->
+<!--		</div>-->
+<!--	</div>-->
+	<div class="mobile-expanded-menu">
+		<div class="mobile-expanded-menu__wrapper list-wrapper">
 			<ul class="list-style-none header-menu-list">
 				<li class="header-menu-list__items items-main">
 					<a class="common-outline">Who we are</a>
