--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -41,71 +41,43 @@
 			</ul>
 		</nav>
 	</div>
-<!--	<div class="expanded-menu">-->
-<!--		<div class="left-details">-->
-<!--			<div class="img-wrapper">-->
-<!--				<img-->
-<!--					src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />-->
-<!--			</div>-->
-<!--			<div class="contact-info">-->
-<!--				<ul class="contact-info-header list-style-none">-->
-<!--					<li class="contact-info-header__items">-->
-<!--						<span>t:<a-->
-<!--							href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>-->
-<!--					</li>-->
-<!--					<li class="contact-info-header__items">-->
-<!--						<span>m:<a-->
-<!--							href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis"-->
-<!--							target="_top">hello@quovantis.com</a></span>-->
-<!--					</li>-->
-<!--				</ul>-->
-<!--			</div>-->
-<!--			<div class="social-media-links">-->
-<!--				<ul class="header-social-media-wrapper list-style-none">-->
-<!--					<li class="header-social-media-wrapper__link"><span>Medium</span></li>-->
-<!--					<li class="header-social-media-wrapper__link"><span>Twitter</span>-->
-<!--					</li>-->
-<!--					<li class="header-social-media-wrapper__link"><span>Dribbble</span>-->
-<!--					</li>-->
-<!--					<li class="header-social-media-wrapper__link"><span>Instagram</span>-->
-<!--					</li>-->
-<!--					<li class="header-social-media-wrapper__link"><span>LinkdIn</span>-->
-<!--					</li>-->
-<!--				</ul>-->
-<!--			</div>-->
-<!--		</div>-->
 
-<!--		<div class="list-wrapper">-->
-<!--			<ul class="list-style-none header-menu-list">-->
-<!--				<li class="header-menu-list__items items-main">-->
-<!--					<a class="common-outline">Who we are</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items items-main">-->
-<!--					<a class="common-outline">What we do</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items items-main">-->
-<!--					<a class="common-outline">Our Work</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items">-->
-<!--					<a class="common-outline">Home</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items">-->
-<!--					<a class="common-outline">Careers</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items">-->
-<!--					<a class="common-outline">Blog</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items">-->
-<!--					<a class="common-outline">Contact</a>-->
-<!--				</li>-->
-<!--				<li class="header-menu-list__items item-btn">-->
-<!--					<a class="primary-btn-sm">Start a Project</a>-->
-<!--				</li>-->
-<!--			</ul>-->
-<!--		</div>-->
-<!--	</div>-->
-	<div class="mobile-expanded-menu">
-		<div class="mobile-expanded-menu__wrapper list-wrapper">
+<!-- expanded menu for desktop -->
+	<div class="expanded-menu">
+		<div class="left-details">
+			<div class="img-wrapper">
+				<img
+					src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />
+			</div>
+			<div class="contact-info">
+				<ul class="contact-info-header list-style-none">
+					<li class="contact-info-header__items">
+						<span>t:<a
+							href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>
+					</li>
+					<li class="contact-info-header__items">
+						<span>m:<a
+							href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis"
+							target="_top">hello@quovantis.com</a></span>
+					</li>
+				</ul>
+			</div>
+			<div class="social-media-links">
+				<ul class="header-social-media-wrapper list-style-none">
+					<li class="header-social-media-wrapper__link"><span>Medium</span></li>
+					<li class="header-social-media-wrapper__link"><span>Twitter</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>Dribbble</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>Instagram</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>LinkdIn</span>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="list-wrapper">
 			<ul class="list-style-none header-menu-list">
 				<li class="header-menu-list__items items-main">
 					<a class="common-outline">Who we are</a>
@@ -134,6 +106,69 @@
 			</ul>
 		</div>
 	</div>
+    <!-- end of expanded menu for desktop -->
+
+    <!-- expanded menu for mobile & tab -->
+<!--	<div class="mobile-expanded-menu">-->
+<!--		<div class="mobile-expanded-menu__wrapper list-wrapper">-->
+<!--			<ul class="list-style-none header-menu-list">-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">Who we are</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">What we do</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items items-main">-->
+<!--					<a class="common-outline">Our Work</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Home</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Careers</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Blog</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items">-->
+<!--					<a class="common-outline">Contact</a>-->
+<!--				</li>-->
+<!--				<li class="header-menu-list__items item-btn">-->
+<!--					<a class="primary-btn-sm">Start a Project</a>-->
+<!--				</li>-->
+<!--			</ul>-->
+
+<!--            <div class="left-details header-menu-list">-->
+<!--                <div class="img-wrapper">-->
+<!--                    <img src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />-->
+<!--                </div>-->
+<!--                <div class="contact-info">-->
+<!--                    <ul class="contact-info-header list-style-none">-->
+<!--                        <li class="contact-info-header__items">-->
+<!--                            <span>t:<a href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>-->
+<!--                        </li>-->
+<!--                        <li class="contact-info-header__items">-->
+<!--                            <span>m:<a href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis" target="_top">hello@quovantis.com</a></span>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <div class="social-media-links">-->
+<!--                    <ul class="header-social-media-wrapper list-style-none">-->
+<!--                        <li class="header-social-media-wrapper__link"><span>Medium</span></li>-->
+<!--                        <li class="header-social-media-wrapper__link"><span>Twitter</span>-->
+<!--                        </li>-->
+<!--                        <li class="header-social-media-wrapper__link"><span>Dribbble</span>-->
+<!--                        </li>-->
+<!--                        <li class="header-social-media-wrapper__link"><span>Instagram</span>-->
+<!--                        </li>-->
+<!--                        <li class="header-social-media-wrapper__link"><span>LinkdIn</span>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--		</div>-->
+<!--	</div>-->
+    <!-- end of expanded menu for mobile & tab -->
 </header>
 
 <main class="lucid-reality" id="lucid-reality">
@@ -150,7 +185,7 @@
 	<section class="what-we-did">
 		<div class="inner-container">
 			<div class="flex-items">
-				<div class="item">
+				<div class="item item-first">
 					<p class="title">What we did:</p>
 					<ul class="working-area-wrapper">
 						<li class="working-area-wrapper-list">
@@ -167,7 +202,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="item">
+				<div class="item item-second">
 					<p class="title">Developed on:</p>
 					<ul>
 						<li><a href="">
@@ -180,7 +215,7 @@
 					</ul>
 					<p class="sub-title">Swift (iOs), Firebase (Backend)</p>
 				</div>
-				<div class="item">
+				<div class="item item-third">
 					<p class="title">Share on:</p>
 					<ul>
 						<li>
@@ -247,8 +282,8 @@
 						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
-								<p class="testimonial-client-para__name">Sumeet Mehta</p>
-								<p class="testimonial-client-para__designation">Project Manager | Lucid Reality</p>
+								<p class="testimonial-client-para__name">Jonathan berent</p>
+								<p class="testimonial-client-para__designation">CEO | Lucid Reality</p>
 							</div>
 						</div>
 					</div>
@@ -297,7 +332,63 @@
 		</div>
 	</section>
 
-	<section class="our-approach"></section>
+	<section class="our-approach">
+		<div class="inner-container">
+			<h2 class="label">our approach</h2>
+			<h3 class="main-heading">Adding delight with little details</h3>
+			<p class="description">We had extensive discussions with our partners who are experts Neuroscientists, seasoned business executives, and life-long lucid dreamers. They guided us on the ideal number of times a user should do a reality check, or how many hours a user should sleep in order to lucid dream. So we designed a subtle visual indicator that turns red when the user has entered an inappropriate input.</p>
+			<div class="design-approach-wrapper">
+				<div class="design-approach">
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/healing.png" />
+						<p class="design-approach-item__text">healing</p>
+					</div>
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/problem-solving.png" />
+						<p class="design-approach-item__text">problem solving</p>
+					</div>
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/fun.png" />
+						<p class="design-approach-item__text">fun</p>
+					</div>
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/personal-insight.png" />
+						<p class="design-approach-item__text">personal insight</p>
+					</div>
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/astral-travel.png" />
+						<p class="design-approach-item__text">astral travel</p>
+					</div>
+					<div class="design-approach-item">
+						<img class="design-approach-item__img" src="../../images/lucid/design-approach/creativity.png" />
+						<p class="design-approach-item__text">creativity</p>
+					</div>
+				</div>
+				<div class="design-approach-swatch">
+					<div class="design-approach-swatch-item list-style-none">
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+					</div>
+					<div class="design-approach-swatch-item list-style-none">
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+						<div class="design-approach-swatch-item__list"></div>
+					</div>
+				</div>
+			</div>
+			<p class="small-description">There were numerous challenges that we faced while visualizing the experience of the app. Most of them were related to understanding the nuances of lucid dreaming and how to implement them digitally for our users. For example— use of color psychology was a key ingredient in some of our illustrations. We derived our pallette from human chakras to relate to our subconcious mind.</p>
+			<p class="description">Apart from that, one of the features of the app asks users to record their dreams in a dream journal. This can happen even during the middle of the night when they might wake up abruptly. To ease their interaction, we decided to keep a dark-theme for the app. </p>
+		</div>
+	</section>
 
 	<section class="development">
 		<div class="inner-container">
@@ -332,19 +423,12 @@
 				</div>
 				<div class="second-section">
 					<div class="award-testimonial">
-						<p class="award-testimonial__para">We are not “Solving a Problem”.
-							We are unlocking a new world. We want people to explore their full
-							potential. Whether one is a creative professional looking for
-							novel experiences, or an executive looking for enhanced creative
-							mental states, this could potentially change the way we look at
-							problems.</p>
+						<p class="award-testimonial__para">Quovantis developed an aesthetically impressive app that's helped the company stand out in the App Store. Their designs are not only unique and highly professional, but also well-researched and thought-out. Their team went the extra mile to exceed expectations and was great to work with overall.</p>
 						<div class="award-testimonial__wrapper">
 							<img class="testimonial-client-img" src="/images/jonathan.png" />
 							<div class="testimonial-client-para">
-								<p class="testimonial-client-para__name">sumeet mehta</p>
-								<p class="testimonial-client-para__designation">project manager<span
-									class="testimonial-client-para__company">lucid reality</span>
-								</p>
+								<p class="testimonial-client-para__name">Jonathan berent</p>
+								<p class="testimonial-client-para__designation">CEO | Lucid Reality</p>
 							</div>
 						</div>
 					</div>
