--- a/pages/catalog/catalog.html
+++ b/pages/catalog/catalog.html
@@ -62,6 +62,9 @@
                             <li>
                                 <img src="../../images/mpulse/react.png" alt="react" class="responsive" />
                             </li>
+                            <li>
+                                <img src="../../images/angular.png" alt="react" class="responsive" />
+                            </li>
                         </ul>
                         <div class="technologies">Python, React, Angular</div>
                     </div>
@@ -103,7 +106,7 @@
                                 <div class="label">an overview</div>
                                 <h2 class="main-heading">A creative solution that automates photoshoots for consumer brands</h2>
                                 <p class="common-para">Catalog is a digital platform to help brands source original visual content without any hassles of managing content production. Founded by Patrick Ip and Jacobo Lumbreras, who had a vision to reinvent the photography market, Catalog makes it simple to order custom photos, videos and GIFs for products.</p>
-                                <p class="bold-para">Catalog aims to solve the biggest struggle that small & emerging brands face of producing unique, high-quality product photography at affordable prices. With Catalog, brands and creatives don’t have to manage the logistics of the production process. They can all spend their time doing what they do best: making cool things.</p>
+                                <p class="bold-para">Catalog aims to solve the biggest struggle that small & emerging brands face of producing <span class="special-text"> unique, high-quality product photography</span> at affordable prices. With Catalog, brands and creatives don’t have to manage the logistics of the production process. They can all spend their time doing what they do best: making cool things.</p>
                             </div>
                         </div>
                     </div>
@@ -118,7 +121,7 @@
                                 <h2 class="main-heading">An MVP to get to the market fast</h2>
                                 <p class="common-para">Our partners wanted to develop a self-serving platform that can take requests from a customer with required specifications, branding aesthetics and provide the photos within two weeks or less.</p>
                                 <p class="common-para-1">For that they wanted to launch an MVP, validate their idea and see if users would be willing to pay for the services that Catalog offered. More than that, they wanted to get user feedback on the application and quickly iterate over it to include more features.</p>
-                                <p class="common-para-2">We helped them build an MVP in 20 weeks with the most lovable features that were crucial for the product's success. After a great response from the target audience, we went ahead with the little details that added delight.</p>
+                                <p class="common-para-2">We helped them build an MVP in <span class="special-text-bold">20 weeks</span> with the most lovable features that were crucial for the product's success. After a great response from the target audience, we went ahead with the little details that added delight.</p>
                             </div>
                         </div>
                     </div>
@@ -131,7 +134,7 @@
                             <div class="approach-content">
                                 <div class="label">our approach</div>
                                 <h2 class="main-heading">Validating the product idea in product discovery workshop</h2>
-                                <p class="common-para">Our partners approached us when Catalog was just an idea on a napkin. During the kick-off meetings, our team traveled to LA at our partner’s location to participate in product discovery and roadmapping discussions which also involved mentors & leaders from Techstars.</p>
+                                <p class="common-para">Our partners approached us when Catalog was just an idea on a napkin. During the kick-off meetings, our team traveled to LA at our partner’s location to participate in product discovery and roadmapping discussions which also involved <span class="special-text">mentors & leaders from <span class="special-text-bold">Techstars.</span></span></p>
                                 <p class="common-para-1">We began from ground level and started building the first version of the product for Catalog’s first customer Naked Poppy, a fashion and beauty products brand. This helped us kickstart our ideation phase as now we had a real customer for whom we were building this platform.</p>
                             </div>
                         </div>
@@ -139,23 +142,24 @@
                 </div>
             </section>
             <section class="research">
-                <div class="row">
-                    <!--<div class="d-flex justify-content-around">
-                        <div class="content-left">
-                            <div class="label">Research and Brainstorming</div>
-                            <div class="main-heading">Discovering problems and seeking creative solutions</div>
-                            <p class="common-para">We conducted several interview rounds with Naked Poppy to understand the process they follow, their pain areas and challenges. Besides that, we had brainstorming sessions with our partners and mentors to understand what features we will provide, how the onboarding process will be, and what would make the checkout experience more rewarding.</p>
-                            <p class="common-para-1">These interview sessions helped us come up with a solution to build a self-serving platform for our users where they can send content request, see their photo library, purchase them and download it as per their requirements. </p>
-                            <p class="common-para-2">We designed a prototype where users can share the creative brief having specifications like model’s gender, model type (kid, adult, old), photoshoot backgrounds, camera angle, lighting, shadows, number of models, etc. We also came up with a feature for the internal stakeholders to get feedback on the content and make changes as they deemed fit.</p>
-                        </div>
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Create a new request</h5>
-                                <p class="card-text">Request multiple shots including photo, video and GIFs.</p>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="content-left">
+                                <div class="label">Research and Brainstorming</div>
+                                <div class="main-heading">Discovering problems and seeking creative solutions</div>
+                                <div class="common-para">We conducted several interview rounds with Naked Poppy to understand the process they follow, their pain areas and challenges. Besides that, we had brainstorming sessions with our partners and mentors to understand what features we will provide, how the onboarding process will be, and what would make the checkout experience more rewarding.</div>
+                                <div class="common-para-1">These interview sessions helped us come up with a solution to build a self-serving platform for our users where they can send content request, see their photo library, purchase them and download it as per their requirements.</div>
+                                <div class="common-para-2">We designed a prototype where users can share the creative brief having specifications like model’s gender, model type (kid, adult, old), photoshoot backgrounds, camera angle, lighting, shadows, number of models, etc. We also came up with a feature for the internal stakeholders to get feedback on the content and make changes as they deemed fit.</div>
                             </div>
                         </div>
-                    </div>-->
+
+                        <div class="content-right">
+                            <div class="col">
+                                <div class="product-cards"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="onboarding">
@@ -167,18 +171,18 @@
                                 <h2 class="main-heading">Improving conversion rate by 21%</h2>
                                 <p class="common-para">One of the biggest challenges was to design the onboarding and the checkout experience. We wanted to make sure the user is able to transact and submit requests in minimal clicks. However, after the first launch, when we evaluated the users’ journey through Google analytics, we realized that our checkout and onboarding flows were not optimized.</p>
                                 <p class="common-para-1">The entire process was a perfect example of validated learning where we quickly redesigned and reiterated on feedback. We went through a lot of iterations to make the experience better and saw improved results right after changing our designs.</p>
-                                <p class="common-para-2">As a result, we saw a 33.85% rise in returning customers which further proved that our redesign was better than the previous one.</p>
+                                <p class="common-para-2">Our conversion rate improved by 21% and due to this we saw a 33.85% rise in returning customers as well.</p>
                             </div>
                         </div>
                     </div>
                     <div class="conversion-stats">
                         <div class="row">                            
-                                <div class="product-portfolio">
+                                <!--<div class="product-portfolio">
                                     <div class="col">
                                         <img src="../../images/catalog/products.png" class="product-img" alt="products" />
                                     </div>
-                                 </div>                            
-                                <div class="product-stat">
+                                 </div>-->                            
+                                <!--<div class="product-stat">
                                     <div class="col-md-7">
                                         <div class="conversion-rate">
                                             <div class="conversion-num">21%</div>
@@ -189,6 +193,21 @@
                                             <div class="conversion-num">33.58%</div>
                                             <p class="conversion-txt">Rise in returning customers</p>
                                         </div>
+                                    </div>
+                              </div>-->
+
+                            <div class="product-portfolio">
+                                <img src="../../images/catalog/products.png" class="product-img" alt="products" />
+                             </div>  
+                            <div class="product-stat">
+                                        <div class="conversion-rate">
+                                            <div class="conversion-num">21%</div>
+                                            <p class="conversion-txt">Increase in conversion rate</p>
+                                        </div>
+                                        <div class="portfolio-stats"></div>
+                                        <div class="conversion-rate">
+                                            <div class="conversion-num">33.58%</div>
+                                            <p class="conversion-txt">Rise in returning customers</p>
                                     </div>
                               </div>
                         </div>
@@ -203,7 +222,7 @@
                                 <div class="label">design and development</div>
                                 <h2 class="main-heading">Designing a content production management tool</h2>
                                 <p class="common-para">Catalog takes care of all the production planning and post production including logistics, usage rights and contracts. To manage this complex process with efficiency the Catalog team needed a tool to collect all of the necessary creative data and execute on customer’s vision in the shortest possible time.</p>
-                                <p class="common-para-1">After indulging in in-depth stakeholder interviews and understanding the entire production lifecycle, our team started building a backend handling system in Python and the frontend in React and Angular.</p>
+                                <p class="common-para-1">After indulging in in-depth stakeholder interviews and understanding the entire production lifecycle, our team started building a <span class="special-text-bold">backend handling system in Python and the frontend in React and Angular.</span></p>
                                 <p class="common-para-2">Since the tool is meant to handle lots of data, we designed it keeping in mind our end users. The colors, theme and visual hierarchy is such that the users are intuitively guided to pay attention to the most important information.</p>
                             </div>
                         </div>
@@ -256,7 +275,7 @@
                             <div class="outcome-content">
                                 <div class="label">The Outcome</div>
                                 <h2 class="main-heading">The fastest, reliable and most efficient platform to outsource custom content</h2>
-                                <p class="common-para">The unique selling point of Catalog is the cost of content production which is very affordable for small & medium fashion brands. Additionally, the quality of images is very high, it can be customized and the entire process can be completed in two weeks.</p>
+                                <p class="common-para">The unique selling point of Catalog is the cost of content production which is very affordable for small & medium fashion brands. Additionally, the quality of images is very high, it can be customized and the entire process can be <span class="special-text">completed in two weeks.</span></p>
                             </div>
                         </div>
                     </div>   
