edit few section at catalog case study

--- a/pages/catalog/catalog.html
+++ b/pages/catalog/catalog.html
@@ -17,15 +17,6 @@
     <header class="header"></header>
 
     <main class="catalog" id="catalog">        
-            <!--<section class="banner">
-            <div class="ball-medium"></div>
-            <div class="ball-large"></div>
-            <div class="inner-content">
-                <h1 class="title-tag">Catalog</h1>
-                <h2 class="subtitle-tag">Revolutionizing content production workflows with technology and design</h2>
-            </div>
-            <div class="hero-img"></div>
-        </section>-->
             <section class="banner">
                 <div class="container-fluid">
                     <div class="row">
@@ -144,7 +135,7 @@
             <section class="research">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-7">
+                        <!--<div class="col-md-7">-->
                             <div class="content-left">
                                 <div class="label">Research and Brainstorming</div>
                                 <div class="main-heading">Discovering problems and seeking creative solutions</div>
@@ -152,12 +143,13 @@
                                 <div class="common-para-1">These interview sessions helped us come up with a solution to build a self-serving platform for our users where they can send content request, see their photo library, purchase them and download it as per their requirements.</div>
                                 <div class="common-para-2">We designed a prototype where users can share the creative brief having specifications like model’s gender, model type (kid, adult, old), photoshoot backgrounds, camera angle, lighting, shadows, number of models, etc. We also came up with a feature for the internal stakeholders to get feedback on the content and make changes as they deemed fit.</div>
                             </div>
-                        </div>
+                        <!--</div>-->
 
                         <div class="content-right">
-                            <div class="col">
-                                <div class="product-cards"></div>
-                            </div>
+                            <ul>
+                                <li><img src="../../images/catalog/features_col_01.svg" alt="col-features" class="first-feature" /> </li>
+                                <li><img src="../../images/catalog/features_col_02.svg" alt="col-features" class="second-feature" /> </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
