- UI developed for 'what we do' page for desktop & laptop view only (not mobile responsive) - Footer created (not mobile responsive) - some fixes done on 'lucid reality' page

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -171,7 +171,7 @@
     <!-- end of expanded menu for mobile & tab -->
 </header>
 
-<main class="lucid-reality" id="lucid-reality">
+	<main class="lucid-reality" id="lucid-reality">
 
 	<section class="banner">
 		<div class="inner-container">
@@ -479,7 +479,73 @@
 
 </main>
 
-<footer class="footer"></footer>
+<footer class="footer">
+	<div class="inner-container">
+		<div class="footer__inner-section">
+			<div class="footer-section-wrapper">
+				<div class="footer-section-wrapper__left">
+					<h3 class="main-heading">Got an interesting project?</h3>
+					<p class="description">Because we got a rockstar team! Tell us about your idea.</p>
+					<div class="primary-btn-lg"><a href="">Get in touch</a></div>
+				</div>
+				<div class="footer-section-wrapper__right">
+					<ul class="footer-section-links-wrapper list-style-none">
+						<h5 class="footer-links-heading">about us</h5>
+						<li><a href="">What we do</a></li>
+						<li><a href="">Who we are</a></li>
+						<li><a href="">Our work</a></li>
+						<li><a href="">Reviews</a></li>
+						<li><a href="">Social impact</a></li>
+						<li><a href="">Careers</a></li>
+						<li><a href="">Blog</a></li>
+						<li><a href="">Contact</a></li>
+					</ul>
+					<ul class="footer-section-links-wrapper list-style-none">
+						<h5 class="footer-links-heading">Our Focus</h5>
+						<li><a href="">Healthcare</a></li>
+						<li><a href="">HR Tech</a></li>
+						<li><a href="">MarTech</a></li>
+						<li><a href="">Reviews</a></li>
+						<li><a href="">Edtech</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer-bottom-wrapper">
+				<div class="footer-bottom-wrapper__left-side">
+					<a class="logo-wrapper" href="/">
+						<img class="logo-wrapper__Quovantis-logo" src="../../images/quovantis-logo.png">
+					</a>
+					<p class="description">Privacy | &#169; Quovantis Technologies</p>
+				</div>
+				<div class="footer-bottom-wrapper__right-side">
+					<ul class="list-style-none footer-social-media-wrapper">
+						<li class="footer-social-media-wrapper__links">
+							<a href="#" target="_blank">
+								<i class="icon">
+									<img alt="linkedin" src="../../images/mpulse/linkedin.svg">
+								</i>
+							</a>
+						</li>
+						<li class="footer-social-media-wrapper__links">
+							<a href="#" target="_blank">
+								<i class="icon">
+									<img alt="twitter" class="responsive" src="../../images/mpulse/twitter.svg">
+								</i>
+							</a>
+						</li>
+						<li class="footer-social-media-wrapper__links">
+							<a href="#" target="_blank">
+								<i class="icon">
+									<img alt="link" class="responsive" src="../../images/mpulse/link.svg">
+								</i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 <!--External Scripts-->
 <script crossorigin="anonymous"
