- animated outline added to footer's link

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -491,22 +491,22 @@
 				<div class="footer-section-wrapper__right">
 					<ul class="footer-section-links-wrapper list-style-none">
 						<h5 class="footer-links-heading">about us</h5>
-						<li><a href="">What we do</a></li>
-						<li><a href="">Who we are</a></li>
-						<li><a href="">Our work</a></li>
-						<li><a href="">Reviews</a></li>
-						<li><a href="">Social impact</a></li>
-						<li><a href="">Careers</a></li>
-						<li><a href="">Blog</a></li>
-						<li><a href="">Contact</a></li>
+						<li class="common-outline"><a href="">What we do</a></li>
+						<li class="common-outline"><a href="">Who we are</a></li>
+						<li class="common-outline"><a href="">Our work</a></li>
+						<li class="common-outline"><a href="">Reviews</a></li>
+						<li class="common-outline"><a href="">Social impact</a></li>
+						<li class="common-outline"><a href="">Careers</a></li>
+						<li class="common-outline"><a href="">Blog</a></li>
+						<li class="common-outline"><a href="">Contact</a></li>
 					</ul>
 					<ul class="footer-section-links-wrapper list-style-none">
 						<h5 class="footer-links-heading">Our Focus</h5>
-						<li><a href="">Healthcare</a></li>
-						<li><a href="">HR Tech</a></li>
-						<li><a href="">MarTech</a></li>
-						<li><a href="">Reviews</a></li>
-						<li><a href="">Edtech</a></li>
+						<li class="common-outline"><a href="">Healthcare</a></li>
+						<li class="common-outline"><a href="">HR Tech</a></li>
+						<li class="common-outline"><a href="">MarTech</a></li>
+						<li class="common-outline"><a href="">Reviews</a></li>
+						<li class="common-outline"><a href="">Edtech</a></li>
 					</ul>
 				</div>
 			</div>
