--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -7,7 +7,7 @@
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 
 	<!--Bootstrap Styles-->
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+	<!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 	<!--Local Styles-->
 	<link href="../../styles/styles.css" rel="stylesheet">
 	<link href="mpulse.css" rel="stylesheet">
