--- a/pages/homepage/homepage.html
+++ b/pages/homepage/homepage.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Quovantis Website</title>
@@ -9,7 +9,8 @@
 	<!--Bootstrap Styles-->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<!--Local Styles-->
-	<link href="styles/styles.css" rel="stylesheet" />
+	<link href="../../styles/styles.css" rel="stylesheet" />
+	<link href="homepage.css" rel="stylesheet" />
 </head>
 <body>
 	<main class="homepage" id="homepage">
